name:           cager
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       crytogram solver
build-type:     Simple
build-depends:  base, bytestring, containers, haskell98, Util

executable:     cager
main-is:        Main.hs
hs-source-dirs: src
